logo and website name changed in all views

--- a/client/app/auth/login.html
+++ b/client/app/auth/login.html
@@ -1,7 +1,7 @@
     <header class="navigation col-xs-12">
         <div class="logo">
-            <img src="../../assets/logo.png"/>
-            <p class="title">Astonishing Owls</p>
+            <img src="../../assets/All-currency-symbol.svg.png"/>
+            <p class="title">CurrenC</p>
         </div>
         <div class="switchPage">
             <a class="btn btn-default" ng-disabled="disabled" href="#/register">Register</a>
