--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -7,8 +7,8 @@
   <body>
     <header class="navigation col-xs-12">
       <div class="logo">
-        <img src="../../assets/logo.png"/>
-        <p class="title">Astonishing Owls</p>
+        <img src="../../assets/All-currency-symbol.svg.png"/>
+        <p class="title">CurrencC</p>
       </div>
       <div ng-controller="logoutController" class="logout">
         <a ng-click='logout()' class="btn btn-default">Logout</a>
@@ -113,5 +113,3 @@
 
   </body>
 </html>
-
-
