--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html ng-app='astonishingOwls'>
   <head>
     <meta charset="utf-8">
-    <title>Astonishing Owls</title>
+    <title>CurrenC</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1">
