button to exports page added

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -19,6 +19,7 @@
       <div class="top-section col-xs-12">
         <h1 class="title">Saved Searches</h1>
         <a ng-click="update()" class="btn btn-default">Update Position!</a>
+        <a href="#/export" class="btn btn-default">Export Charts</a>
         <!--<a ng-click="scrollTo('newSearch')" class="btn btn-default">New Search</a>-->
       </div>
       <div class="myContainer col-xs-12 col-md-6">
