--- a/client/app/export/export.html
+++ b/client/app/export/export.html
@@ -4,9 +4,14 @@
           <p class="title">CurrenC</p>
       </div>
       <div class="switchPage">
+          <a href="#/dashboard" class="btn btn-default">Dashboard</a>
           <a class="btn btn-default" ng-disabled="disabled" href="#/login">Login</a>
       </div>
   </header>
+  <div class="gridTitle">
+    <h1 class="title">Exportable Charts</h1>
+    <h3>now featuring .csv and .pdf</h3>
+  </div>
 
   <div ng-controller="exportController" class="Chart col-xs-12">
       <!-- <div  class="col-xs-12 col-md-6"> -->
