--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -107,7 +107,7 @@
 
 
     <footer class="footer col-xs-12">
-      <p>Made with <i class="fa fa-heart faa-pulse animated" aria-hidden="true"></i> by Astonishing Owls Inc. </p>
+      <p>Made with <i class="fa fa-heart faa-pulse animated" aria-hidden="true"></i> by CurrenC Inc. </p>
     </footer>
 
 
