update backend db post route

--- a/client/app/auth/login.html
+++ b/client/app/auth/login.html
@@ -11,7 +11,7 @@
     <div class="login_body col-xs-12">
         <div id="login" class="col-xs-12 col-md-6">
             <div class="tagline col-xs-12">
-                <h3>We're the Astonishing Owls. Bringing the power of FX to your fingertips</h3>
+                <h3>Bringing the power of FX to your fingertips</h3>
             </div>
             <h1>Login</h1>
             <div ng-show="error" class="alert alert-danger">{{errorMessage}}</div>
@@ -34,5 +34,5 @@
 
 
     <footer class="footer col-xs-12">
-        <p>Made with <i class="fa fa-heart faa-pulse animated" aria-hidden="true"></i> by Astonishing Owls Inc. </p>
+        <p> </p>
     </footer>
