--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -8,7 +8,7 @@
     <header class="navigation col-xs-12">
       <div class="logo">
         <img src="../../assets/All-currency-symbol.svg.png"/>
-        <p class="title">CurrencC</p>
+        <p class="title">CurrenC</p>
       </div>
       <div ng-controller="logoutController" class="logout">
         <a href="#/export" class="btn btn-default">Export Charts</a>
@@ -107,7 +107,6 @@
 
 
     <footer class="footer col-xs-12">
-      <p>Made with <i class="fa fa-heart faa-pulse animated" aria-hidden="true"></i> by Astonishing Owls Inc. </p>
     </footer>
 
 
