fixed predict in index.html

--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,7 @@
     <script src="lib/pdfmake/build/pdfmake.js"></script>
     <script src="lib/pdfmake/build/vfs_fonts.js"></script>
 
+    <script src="app/predict/predict.js"></script>
     <script src="app/export/export.js"></script>
     <script src="app/dashboard/dashboard.js"></script>
     <script src="app/auth/controllers.js"></script>
