--- a/client/app/predict/predict.html
+++ b/client/app/predict/predict.html
@@ -9,10 +9,10 @@
     </div>
 </header>
 
-<div ng-controller="predictController" class="Chart col-xs-12">
+<div ng-controller="predictController" class="grid">
     <!-- <div  class="col-xs-12 col-md-6"> -->
       <h3>Prediction</h3>
-
+      <h1> {{prediction}} </h1>
     <!-- </div> -->
 </div>
 
