--- a/client/app/export/export.html
+++ b/client/app/export/export.html
@@ -14,10 +14,12 @@
   </div>
 
   <div ng-controller="exportController" class="Chart col-xs-12">
-      <!-- <div  class="col-xs-12 col-md-6"> -->
-        <h3>Chart</h3>
-          <div id="grid1" ui-grid="options" ui-grid-selection ui-grid-exporter class="grid"></div>
-      <!-- </div> -->
+        <div class="grids">
+          <h4>Positions</h4>
+          <div ui-grid="options" ui-grid-selection ui-grid-exporter class="grid"></div>
+          <h4>Position History</h4>
+          <div ui-grid="optionsB" ui-grid-selection ui-grid-exporter class="gridB"></div>
+      </div>
   </div>
 
 
