css for export charts, script for css in index.html

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="lib/font-awesome-animation/src/font-awesome-animation.css">
     <link rel="shortcut icon" href="assets/myfav.ico" type="image/x-icon"/>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/charts.css" />
     <link rel="stylesheet" type="text/css" href="lib/angular-ui-grid/ui-grid.min.css">
   </head>
   <body>
