--- a/client/app/export/export.html
+++ b/client/app/export/export.html
@@ -8,6 +8,7 @@
           <a class="btn btn-default" ng-disabled="disabled" ng-click="logout()">Logout</a>
       </div>
   </header>
+
   <div class="gridTitle">
     <h1 class="title">Exportable Charts</h1>
     <h3>now featuring .csv and .pdf</h3>
@@ -15,14 +16,11 @@
 
   <div ng-controller="exportController" class="Chart col-xs-12">
         <div class="grids">
+          <div>
           <h4>Positions</h4>
           <div ui-grid="options" ui-grid-selection ui-grid-exporter class="grid"></div>
+        </div>
           <h4>Position History</h4>
           <div ui-grid="optionsB" ui-grid-selection ui-grid-exporter class="gridB"></div>
       </div>
   </div>
-
-
-  <footer class="footer col-xs-12">
-      <p>Made with <i class="fa fa-heart faa-pulse animated" aria-hidden="true"></i> by CurrenC Inc. </p>
-  </footer>
