adapted google-server for deployement with process.env variables

--- a/client/app/predict/predict.html
+++ b/client/app/predict/predict.html
@@ -12,7 +12,8 @@
 <div ng-controller="predictController" class="grid">
     <!-- <div  class="col-xs-12 col-md-6"> -->
       <h3>Prediction</h3>
-      <h1> {{prediction}} </h1>
+      <div> Prediction: {{prediction}} </div>
+      <div> {{items}} </div>
     <!-- </div> -->
 </div>
 
