--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -26,7 +26,7 @@
             <div class="box">
               <div class="currency col-xs-6">
                 <div class="sm_container2">
-                  <i class="fa fa-usd faa-ring animated" aria-hidden="true"></i>
+                  <i class="fa fa-usd" aria-hidden="true"></i>
                 </div>
                 <div class="sm_container">
                   {{ item.cxy }}
@@ -103,13 +103,6 @@
         </div>
       </div>
     </div>
-
-
-
-    <footer class="footer col-xs-12">
-      <p>Made with <i class="fa fa-heart faa-pulse animated" aria-hidden="true"></i> by CurrenC Inc. </p>
-    </footer>
-
 
   </body>
 </html>
